--- a/WebApplication1/wwwroot/index.html
+++ b/WebApplication1/wwwroot/index.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Long Polling Example</title>
+    <title>Index</title>
 </head>
 <body>
-    <h1>ロングポーリングの例</h1>
-    <div id="message">サーバーからの応答を待っています...</div>
-    <button id="startButton" onclick="startPolling()">ポーリング開始</button>
-    <button id="stopButton" onclick="stopPolling()" disabled>ポーリング停止</button>
-    <div id="status">ステータス: 待機中</div>
-
-    <script src="longPolling.js"></script>
+    <h1>メインページ</h1>
+    <p><a href="longPolling.html" target="_blank">ロングポーリングのページを開く</a></p>
 </body>
 </html>
