WebSocketによるデータ受信機能を追加。 ただし動作が怪しいところがある

--- a/WebApplication1/wwwroot/index.html
+++ b/WebApplication1/wwwroot/index.html
@@ -9,5 +9,6 @@
     <h1>メインページ</h1>
     <p><a href="longPolling.html" target="_blank">ロングポーリングのページを開く</a></p>
     <p><a href="sse.html" target="_blank">Server-Sent Eventsのページを開く</a></p>
+    <p><a href="websocket.html" target="_blank">WebSocketのページを開く</a></p>
 </body>
 </html>
